# bubbola

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CONFIGURATION.md  Makefile  README.md  bubbola.spec  example_suppliers.csv  pyproject.toml  pytest.ini  test_encoding_fix.py  uv.toml
.github/workflows/: build-binaries.yml  ci.yml  release.yml
scripts/: analysis.py  build_binary.py  grid_search.py  grid_search_analysis.py  main.py  run_grid_search_example.sh  setup_config.py  test_validation.py  validation.py  verify_release.py  version_manager.py
src/bubbola/: __init__.py  __main__.py  app.py  batch_processor.py  cli.py  compatible_image_data_loader.py  config.py  core.py  data_models.py  deleteme.py  fattura_reader.py  image_data_loader.py  image_processing.py  load_results.py  main.py  model_creator.py  models.py  price_estimates.py  response_func.py  results_converter.py  test_parallel_processing.py
src/bubbola/flows/: README.md  __init__.py  fattura_check_v1.py  lg_concrete_v1.py  lg_concrete_v1_test.py  small_parsing.py  small_test.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_core.py  test_image_data_loader.py  test_model_creator.py  test_price_estimates.py  test_results_converter.py  test_version_manager.py
tests/assets/single_pages_resized/results/small_test_20250718_102027/: batch_log_20250718_102032.json
tests/assets/single_pages_resized/results/small_test_20250718_102035/: batch_log_20250718_102039.json
tests/assets/single_pages_resized/results/small_test_20250718_102143/: batch_log_20250718_102146.json
tests/assets/single_pages_resized/results/small_test_20250718_102200/: batch_log_20250718_102203.json  ddts_table.csv  response_0088_001_001_001.json
tests/results/lg_concrete_v1_20250717_230257/: batch_log_20250717_230459.json  ddts_table.csv  items_table.csv  response_0088_001_001.json  response_0089_001_001.json  response_0089_001_002.json
tests/results/lg_concrete_v1_test_20250717_225426/: batch_log_20250717_225427.json
tests/results/lg_concrete_v1_test_20250717_225546/: batch_log_20250717_225546.json
tests/results/lg_concrete_v1_test_20250717_225602/: batch_log_20250717_225622.json  response_0088_001_001.json  response_0089_001_001.json
tests/results/lg_concrete_v1_test_20250717_225952/: batch_log_20250717_230031.json  ddts_table.csv  items_table.csv  response_0089_001_002.json
tests/results/lg_concrete_v1_test_20250717_230206/: batch_log_20250717_230252.json  ddts_table.csv  items_table.csv  response_0089_001_002.json
